<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8BBD0"
    tools:context=".ChatDashBoard">

    <TextView
        android:id="@+id/roomID"
        android:layout_width="308dp"
        android:layout_height="67dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/artifika"
        android:text="@string/RoomChat"
        android:textAlignment="center"
        android:textColor="#6D4C41"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/listmessageID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listmessageID"
        android:layout_width="341dp"
        android:layout_height="399dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="37dp"
        android:background="#E1BEE7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomID" />

    <Button
        android:id="@+id/button"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:layout_marginStart="262dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/artifika"
        android:onClick="SendMessageToServer"
        android:text="@string/send"
        android:textColor="#6D4C41"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outPutMessageID" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="101dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/outPutMessageID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listmessageID">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/outPutMessageID"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="#F48FB1"
        android:hint="@string/Message"
        android:textColorHint="#E1BEE7"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/listmessageID" />

    <Button
        android:id="@+id/SingOutbtID"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/artifika"
        android:onClick="handleSignOutbtn"
        android:text="SignOut"
        android:textColor="#715757"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>